// Vitest Snapshot v1

exports[`Textarea > Textarea autosizeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <div
      class="t-textarea__name"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="-1"
        name="标签文字"
        placeholder="请输入文字"
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <!--v-if-->
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="-1"
        name=""
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea eventsVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <div
      class="t-textarea__name"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="-1"
        name="标签文字"
        placeholder="请输入文字"
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea labelVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <!--v-if-->
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="-1"
        name=""
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea maxcharacterVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <div
      class="t-textarea__name"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="-1"
        name="标签文字"
        placeholder="请输入文字"
      />
      <div
        class="t-textarea__count"
      >
        0/10
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea maxlengthVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <div
      class="t-textarea__name"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        maxlength="20"
        name="标签文字"
        placeholder="请输入文字"
      />
      <div
        class="t-textarea__count"
      >
        0/20
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Textarea 多行文本框
  </h1>
  <p
    class="summary"
  >
    用于多行文本的输入
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础多行文本框
    </p>
    
    <div
      class="t-textarea"
    >
      <!--v-if-->
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="-1"
          name=""
          placeholder="请输入文字"
        />
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带标题多行文本框
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="-1"
          name="标签文字"
          placeholder="请输入文字"
        />
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      自动增高多行文本框
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        
        <div>
          标签文字
        </div>
        
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="-1"
          name="标签文字"
          placeholder="请输入文字"
        />
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      禁用多行文本框
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper t-textarea-is-disabled"
      >
        <textarea
          disabled=""
          maxlength="-1"
          name="标签文字"
          placeholder="请输入文字"
        />
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 字符限制
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      设置最大字符个数
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="20"
          name="标签文字"
          placeholder="请输入文字"
        />
        <div
          class="t-textarea__count"
        >
          0/20
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      设置最大字符个数，一个汉字表示两个字符
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="-1"
          name="标签文字"
          placeholder="请输入文字"
        />
        <div
          class="t-textarea__count"
        >
          0/10
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      04 事件
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带事件文本框
    </p>
    
    <div
      class="t-textarea"
    >
      <div
        class="t-textarea__name"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          maxlength="-1"
          name="标签文字"
          placeholder="请输入文字"
        />
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Textarea > Textarea typeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-textarea"
  >
    <div
      class="t-textarea__name"
    >
      标签文字
    </div>
    <div
      class="t-textarea__wrapper t-textarea-is-disabled"
    >
      <textarea
        disabled=""
        maxlength="-1"
        name="标签文字"
        placeholder="请输入文字"
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;
